--- a/.github/workflows/import-supabase-dev.yml
+++ b/.github/workflows/import-supabase-dev.yml
@@ -1,7 +1,7 @@
 name: Import Supabase Dev DB
 
 on:
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
 
 jobs:
   import:
@@ -14,11 +14,33 @@ jobs:
       - name: Install PostgreSQL client
         run: sudo apt-get update && sudo apt-get install -y postgresql-client
 
-      - name: Import prod_dump.sql into Supabase Dev
+      - name: Show GitHub runner public IP
+        run: curl https://ifconfig.me
+
+      - name: Print connection details (excluding password)
+        run: |
+          echo "Connecting to host: ${{ secrets.SUPABASE_HOST }}"
+          echo "Database: ${{ secrets.SUPABASE_DB }}"
+          echo "User: ${{ secrets.SUPABASE_USER }}"
+          echo "File: prod_dump.sql"
+
+      - name: Test connection
         env:
           PGPASSWORD: ${{ secrets.SUPABASE_PASSWORD }}
         run: |
-          echo "Starting import into Supabase dev DB..."
+          echo "Testing connection to Supabase..."
+          psql \
+            -h ${{ secrets.SUPABASE_HOST }} \
+            -U ${{ secrets.SUPABASE_USER }} \
+            -d ${{ secrets.SUPABASE_DB }} \
+            -c '\conninfo'
+
+      - name: Import prod_dump.sql into Supabase Dev
+        if: ${{ success() }}
+        env:
+          PGPASSWORD: ${{ secrets.SUPABASE_PASSWORD }}
+        run: |
+          echo "Starting import..."
           psql \
             -h ${{ secrets.SUPABASE_HOST }} \
             -U ${{ secrets.SUPABASE_USER }} \
